# security-agents-platform

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION-ASSESSMENT-REPORT.md  DOCUMENTATION-INDEX.md  ENTERPRISE-DEPLOYMENT-STRATEGY.md  ENTERPRISE-TOPOLOGY-ANALYSIS.md  GroundLayer_Threat_Model.md  PLATFORM-SUMMARY-ACCURATE.md  PLATFORM-SUMMARY.md  README.md  ROADMAP.md  SCALE-OPERATIONS-FRAMEWORK.md  SECURITY-COVERAGE-GAPS.md  TEST-COVERAGE-REQUIREMENTS.md  pyproject.toml  repository_analysis.json  security_report_fantasy_mcp.json  setup_and_test.py
agents/: README.md  SIGMA-AGENT.md  delta_red_team_agent.py  demo_sigma_agent.py  security_metrics.db
analysis/: KNOWLEDGE-GRAPH-ANALYSIS.md
context-layer/: CONVENTIONS.md  INTAKE-QUESTIONNAIRE.md  README.md  VISION-Agentic-Security-Delivery.md  sla.yaml
crowdstrike-mcp-integration/: INTEGRATION-DESIGN.md  demo.py  demo_phase_2_comprehensive.py
deploy/: docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT-GUIDE.md  REALISTIC-VALUE-ASSESSMENT.md
enhanced-analysis/: DEPLOYMENT.md  Dockerfile  agent_orchestration_system.py  docker-compose.prod.yml  docker-entrypoint.sh  intelligence_fusion_engine.py  production_api_server.py  requirements.txt  tiger_team_beta_4.py
enterprise-topology/: Dockerfile  README.md  docker-compose.yml  requirements.txt  start.py
github-integrations/: README.md
iam-security/: PROJECT_SUMMARY.md  README.md  deploy.sh  requirements.txt  setup.py
infrastructure/: IMPLEMENTATION_STATUS.md  README.md
scripts/: enhanced_security_analyzer.py  validate_docs.py
secops-ai-orchestration/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  config.py  deploy.sh  main.py  pytest.ini  (+1 more)
(+310 files in other folders)
